fix align container

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1505,7 +1505,7 @@ pre code {
 }
 @media (min-width: 1100px) {
   .container {
-    width: 1025px;
+    width: 1020px;
   }
 }
 .container-fluid {
