--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -343,8 +343,7 @@ form .row:first-child .floating-label-form-group {
     background-color: #D6405B
 }
 .hr-landing {
-    border-color: #B5ABAD;
-    margin-left: -15px
+    border-color: #B5ABAD
 }
 .social-landing {
     font-size: 2em
